# festapi_oz_task

./: .gitignore  pyproject.toml
01_fastapi_task/: main.py  scratch_4.py
02_fastapi_task/: .coverage  ci.yml  package_test.py  temp.py  test.sh  test_simple.py
03_fastapi_task/: asgi.py  ci.yml  twitter.py
03_fastapi_task/app/: __init__.py
04_fastapi_task/: twitter.py
04_fastapi_task/app/apis/v1/: meeting_router.py
05_fastapi_task/: __init__.py
05_fastapi_task/app/apis/: participant_router.py
05_fastapi_task/app/apis/v1/: meeting_router.py
05_fastapi_task/app/tests/apis/v1/: test_meeting_router_edgedb.py
06_fastapi_task/: main.py  pyproject.toml
06_fastapi_task/app/: test.sh
06_fastapi_task/app/apis/v1/: meeting_router.py
06_fastapi_task/app/dtos/: create_participant_request.py
06_fastapi_task/app/models/: likes.py  reviews.py
06_fastapi_task/app/routers/: likes.py  reviews.py
06_fastapi_task/app/schemas/: likes.py  reviews.py
06_fastapi_task/app/tortoise_models/: meeting.py
06_fastapi_task/app/utils/: base62.py
