[tool.poetry]
name = "oz-fastapi"
version = "0.1.0"
description = ""
authors = ["jwhjkl0720-alt <jwhjkl0720@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
orjson = "^3.11.5"
sqids = "0.5.1"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"
pytest = "8.3.4"
coverage = "7.6.9"
mypy = "1.13.0"
pytest-asyncio = "0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
target-version="py313"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.coverage.run]
omit = [
    "test_*.py",
    "*/test_*.py",
    "*/test/*",
]  # 루트 혹은 루트 아래의 파일들 중 test_ 로 시작하는 파일을 제외.

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"